--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,7 +1,16 @@
 /* This is an example of using Sass, otherwise plain CSS works too*/
-$primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+$primary-background: white;
 ;
 
 body {
   background: $primary-background;
+}
+
+* {
+  font-family: 'Open Sans', sans-serif;
+  border: red 1px solid;
+}
+
+* h1 {
+  font-family: 'DM Serif Display', serif;
 }
