--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -6,9 +6,34 @@ body {
   background: $primary-background;
 }
 
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: pink;
+  width: 100%;
+  height: 15vh;
+}
+
+.hidden {
+  display: none;
+}
+
+.booking-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 30vh;
+  margin-right: 40px;
+} 
+
+.main-container {
+  display: flex;
+}
+
 * {
   font-family: 'Open Sans', sans-serif;
-  border: red 1px solid;
+  // border: red 1px solid;
 }
 
 * h1 {
