--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -13,6 +13,7 @@ nav {
   background-color: pink;
   width: 100%;
   height: 15vh;
+  position: absolute;
 }
 
 .hidden {
@@ -25,10 +26,21 @@ nav {
   justify-content: space-between;
   height: 30vh;
   margin-right: 40px;
+  margin-top: 75px;
 } 
+
+.trip-container {
+  margin-top: 75px;
+}
+
+.card-container {
+  width: 70%;
+  height: 40vh;
+}
 
 .main-container {
   display: flex;
+  height: 100vh;
 }
 
 * {
