--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -34,8 +34,9 @@ nav {
 }
 
 .card-container {
-  width: 70%;
-  height: 40vh;
+  width: 100%;
+  height: 80vh;
+  overflow-x: none;
 }
 
 .main-container {
