Begin form validation/trip post request

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -44,6 +44,10 @@ nav {
   height: 100vh;
 }
 
+.error-message {
+  color: red;
+}
+
 * {
   font-family: 'Open Sans', sans-serif;
   // border: red 1px solid;
