--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,63 +1,4 @@
+@import 'main';
 @import 'components';
-/* This is an example of using Sass, otherwise plain CSS works too*/
-// $nav-background: #f4f1de;
-// $primary-background: #FFFFFF;
-// $accent-color: #e07a5f;
-
-// body {
-//   background: $primary-background;
-// }
-
-// nav {
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-evenly;
-//   background-color: $nav-background;
-//   width: 100%;
-//   height: 15vh;
-//   position: absolute;
-// }
-
-// .hidden {
-//   display: none;
-// }
-// button {
-//   background-color: $accent-color;
-//   color: $primary-background;
-// }
-
-// .booking-container {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: space-between;
-//   height: 30vh;
-//   margin-right: 40px;
-//   margin-top: 75px;
-// } 
-
-// .trip-container {
-//   margin-top: 75px;
-// }
-
-// .card-container {
-//   width: 100%;
-//   height: 80vh;
-//   overflow-x: none;
-// }
-
-// .main-container {
-//   display: flex;
-//   height: 100vh;
-// }
-
-// .error-message {
-//   color: red;
-// }
-
-// * {
-//   font-family: 'Open Sans', sans-serif;
-// }
-
-// * h1 {
-//   font-family: 'DM Serif Display', serif;
-// }
+@import 'layout';
+@import 'normalize';
