--- a/src/css/_components.scss
+++ b/src/css/_components.scss
@@ -1,42 +1,15 @@
+* {
+  font-family: $font-style;
+}
 
+h1 {
+  font-family: $accent-font; 
+}
 button {
   background-color: $accent-color;
   color: $primary-background;
 }
 
-.booking-container {
-  @include flex(column);
-  @include justify(space-between);
-  @include dimensions (30vh, 30%);
-  align-items: center;
-  margin-top: 150px;
-  margin-right: 20px;
-  margin-left: 20px;
-} 
-
-.trip-container {
-  margin-top: 75px;
-}
-
-.card-container {
-  width: 100%;
-  height: 80vh;
-  overflow-x: none;
-}
-
-.main-container {
-  display: flex;
-  height: 100vh;
-}
-
 .error-message {
-  color: red;
-}
-
-* {
-  font-family: 'Open Sans', sans-serif;
-}
-
-* h1 {
-  font-family: 'DM Serif Display', serif;
+  color: #d90429;
 }
