--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -10,7 +10,6 @@ html {
 .main-container {
   @include flex(row);
   justify-content: space-around;
-  @include dimensions(50vh, 85%)
 }
 
 .hidden {
@@ -22,27 +21,26 @@ nav {
   background-color: $nav-background;
   @include flex(row);
   @include justify(space-between);
+  align-items: center;
   @include dimensions(15vh, 100%);
   position: absolute;
-
 }
 
 /* BOOKING CONTAINER */
 .booking-container {
   @include flex(column);
-  @include justify(space-between);
-  @include dimensions (30vh, 20%);
-  align-items: center;
+  @include justify(space-evenly);
+  align-content: center;
   margin-top: 150px;
-  margin-right: 20px;
-  margin-left: 20px;
+  margin-right: 5%;
+  margin-left: 5%;
+  position: relative;
 } 
 
 /* TRIP CONTAINER */
 .trip-container {
   @include dimensions(60vh, 80%);
   margin-top: 150px;
-  // overflow-x: hidden;
 }
 
 .card-container {
@@ -52,12 +50,13 @@ nav {
   flex-wrap: wrap;
   align-content: space-evenly;
   overflow: auto;
-  min-width: 75vw;
+  min-width: 70vw;
   margin-top: 5%;
 }
 
 .card {
   @include dimensions(50vh, auto);
+  @include flex(column);
   border: 2px solid #e5e5e5;
   margin-top: 4%;
 }
