--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -64,6 +64,7 @@ nav {
 .card {
   @include dimensions(50vh, auto);
   @include flex(column);
+  background-color: $nav-background;
   border: 2px solid #e5e5e5;
   margin-top: 4%;
 }
