Add active styling

--- a/src/css/_components.scss
+++ b/src/css/_components.scss
@@ -35,6 +35,10 @@ button {
   &:hover {
     background-color: #81b29a;
   }
+
+  &:active {
+    background-color: #81b29a;
+  }
 }
 
 .submit-form {
