--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -7,6 +7,19 @@ html {
   width: 100%;
 }
 
+.login-container {
+  @include flex(row);
+  @include dimensions(8vh, 50%);
+  justify-content: center;
+  align-content: center;
+  margin-right: 15px;
+  margin-top: 2.5%;
+}
+
+.login-label {
+  margin-left: 8px;
+}
+
 .main-container {
   @include flex(row);
   justify-content: space-around;
