Adjust font sizes and weights for readability

--- a/src/css/_components.scss
+++ b/src/css/_components.scss
@@ -23,6 +23,19 @@ h2 {
   }
 }
 
+.form {
+  font-size: 100%;
+  font-weight: 900;
+}
+
+.trip-title {
+  font-size: 125%;
+}
+
+.trip-info {
+  font-size: 110%;
+}
+
 /* BUTTONS */
 button {
   background-color: $accent-color;
